# vivadb

./: .env.test  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  main.v  schema.v.sql  v.mod
.github/workflows/: build.yml  build_py.yml  lint.yml  pre_release.yml  release.yml  release_py.yml  test_pr.yml  test_push.yml  test_py.yml
dbops/: dbops.v  dbops_test.v
dotenv/: dotenv.v  dotenv_test.v
migrate_cmd/: migrate_cmd.v  migrate_cmd_test.v
new_cmd/: new_cmd.v  new_cmd_test.v
py/: pyproject.toml
py/src/vivadb_py/: main.py
test_data/correct_schema/: schema.v.sql
test_data/wrong_schema/wrong_metadata/: schema.v.sql
test_data/wrong_schema/wrong_tables/: schema.v.sql
