[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vivadb-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
]

[project.scripts]
vivadb = "vivadb_py.main:main"

[tool.hatch.build.targets.wheel]
only-include = ["src/vivadb_py"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
